<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Dosador De Calorias "</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_resumo_diario">Resumo Diário</string>
    <string name="title_activity_relatorio">Relatório</string>
    <string name="title_activity_consumo_diario">Consumo Diário</string>
    <string name="title_activity_pesquia">Pesquisa</string>
    <string name="title_activity_detalhes_pesquisa">Detalhes</string>
    <string name="title_activity_detalhes_alimento">Detalhes do Alimento</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_ususuario">Usuário</string>


    <string name="label_quantidade">Quantidade</string>
    <string name="label_porcao">Porção</string>
    <string name="label_info_nutricional">Informação Nutricional</string>
    <string name="label_info_nutri">Info. Nutricional</string>
    <string name="label_calorias">Calorias:</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_tipo_refeicao">Refeição:</string>
    <string name="label_gorduras">Gorduras:</string>
    <string name="label_carboidratos">Carb.:</string>
    <string name="label_proteinas">Proteínas:</string>
    <string name="edit_quantidade_default">1</string>
    <string name="lable_btn_mais_detalhes">Mais</string>
    <string name="lable_btn_salvar">Salvar</string>
    <string name="lable_btn_excluir">Excluir</string>
    <string name="lable_btn_consumo_diario">Cons.Dia.</string>
    <string name="grid_line_calorias">Calorias</string>
    <string name="grid_line_carboidratos">Carboidratos</string>
    <string name="grid_line_proteinas">Proteínas</string>
    <string name="grid_line_gorduras">Gorduras</string>
    <string name="grid_line_gordura_saturada">Gordura Saturada</string>
    <string name="grid_line_gord_sat">Gord. Saturada</string>
    <string name="grid_line_gordura_monoinsaturada">Gordura Monoinsaturada</string>
    <string name="grid_line_gord_mono">Gordura Mono...</string>
    <string name="grid_line_gordura_poliinsaturada">Gordura Poliinsaturada</string>
    <string name="grid_line_gord_poli">Gordura Poli...</string>
    <string name="grid_line_gordura_trans">Gordura Trans</string>
    <string name="grid_line_colesterol">Colesterol</string>
    <string name="grid_line_sodio">Sódio</string>
    <string name="grid_line_fibras">Fibras</string>
    <string name="grid_line_potassio">Potássio</string>
    <string name="grid_line_acucar">Açúcar</string>
    <string name="grid_line_vitamina_a">Vitamina A</string>
    <string name="grid_line_vitamina_c">Vitamina C</string>
    <string name="grid_line_calcio">Cálcio</string>
    <string name="grid_line_ferro">Ferro</string>



    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_save">Salvar</string>
    <string name="action_search">Pesquisar</string>
    <string name="search_hint">Pesquisar</string>
    <string name="action_filter">Filtro</string>

    <!--Dialog Alert-->
    <string name="dialog_opcao_sim">Sim</string>
    <string name="dialog_opcao_nao">Não</string>
    <string name="dialog_titulo">Confirmação</string>
    <string name="dialog_mensagem_salvar_dieta">Deseja salvar na sua dieta?</string>
    <string name="dialog_mensagem_excluir_dieta">Deseja excluir da sua dieta?</string>

    <!--Dialog Alert Internet -->
    <string name="dialog_opcao_cancelar">Cancelar</string>
    <string name="dialog_opcao_tente">Tente Novamente</string>
    <string name="dialog_titulo_internet">Atenção</string>
    <string name="dialog_mensagem_internet">Verifique sua conexão com a Internet e tente novamente.</string>

    <!--Action Bar-->
    <string name="actionbar_pesquisa">Pesquisar Alimento</string>



    <!--Tela Relatorio-->
    <string name="lable_btn_hoje">Hoje</string>
    <string name="txt_lable_filtro">Filtro</string>
    <string name="txt_label_data_inicial">De:</string>
    <string name="txt_label_data_final">até:</string>
    <string name="txt_titulo_coluna_data">Data</string>
    <string name="txt_titulo_coluna_total_data">Total Calorias</string>

    <!--Mensagens ao usuario-->
    <string name="msn_info_alimento">Alimento não encontrado!</string>

</resources>
