<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txt_quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_quantidade" />

    <EditText
        android:id="@+id/edit_quantidade"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_quantidade"
        android:text="@string/edit_quantidade_default"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txt_porcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/txt_quantidade"
        android:text="@string/label_porcao" />

    <EditText
        android:id="@+id/edit_porcao"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_porcao"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/edit_quantidade"
        android:enabled="false" />

    <TextView
        android:id="@+id/txt_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_quantidade"
        android:layout_marginTop="16dp"
        android:text="@string/label_descricao" />

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_descricao" />

    <TextView
        android:id="@+id/txt_info_nutricional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_descricao"
        android:text="@string/label_info_nutricional"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_calorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_info_nutricional"
        android:text="@string/label_calorias"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_calorias_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_info_nutricional"
        android:layout_toRightOf="@id/txt_calorias"
        android:text="200g" />


    <TextView
        android:id="@+id/txt_gorduras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_calorias"
        android:text="@string/label_gorduras"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_gorduras_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_calorias"
        android:layout_toRightOf="@id/txt_gorduras"
        android:text="200g" />

    <TextView
        android:id="@+id/txt_carboidratos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_gorduras"
        android:text="@string/label_carboidratos"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_carboidratos_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_gorduras"
        android:layout_toRightOf="@id/txt_carboidratos"
        android:text="200g" />

    <TextView
        android:id="@+id/txt_proteinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_carboidratos"
        android:text="@string/label_proteinas"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_proteinas_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_carboidratos"
        android:layout_toRightOf="@id/txt_proteinas"
        android:text="200g" />

    <Button
        android:id="@+id/btn_mais_detalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txt_info_nutricional"
        android:padding="16dp"
        android:text="@string/lable_btn_mais_detalhes" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_mais_detalhes"
        android:padding="16dp"
        android:text="@string/lable_btn_salvar" />

    <Button
        android:id="@+id/btn_consumo_diario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_salvar"
        android:padding="16dp"
        android:text="@string/lable_btn_consumo_diario" />


</RelativeLayout>
