<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.ufg.inf.dosador.app.DetalhesPesquisaActivity">

   <TextView
       android:id="@+id/txt_quantidade"
       android:text="@string/label_quantidade"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_quantidade"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_quantidade"/>

    <TextView
        android:id="@+id/txt_descricao"
        android:text="@string/label_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_quantidade"/>

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_descricao"/>

    <TextView
        android:id="@+id/txt_info_nutricional"
        android:text="@string/label_info_nutricional"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_descricao" />

    <TextView
        android:id="@+id/txt_calorias"
        android:text="@string/label_calorias"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_info_nutricional"/>

    <TextView
        android:id="@+id/txt_calorias_valor"
        android:text="200g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_info_nutricional"
        android:layout_toRightOf="@id/txt_calorias"/>


    <TextView
        android:id="@+id/txt_gorduras"
        android:text="@string/label_gorduras"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_calorias"/>

    <TextView
        android:id="@+id/txt_gorduras_valor"
        android:text="200g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_calorias"
        android:layout_toRightOf="@id/txt_gorduras"/>

    <TextView
        android:id="@+id/txt_carboidratos"
        android:text="@string/label_carboidratos"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_gorduras"/>

    <TextView
        android:id="@+id/txt_carboidratos_valor"
        android:text="200g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_gorduras"
        android:layout_toRightOf="@id/txt_carboidratos"/>

    <TextView
        android:id="@+id/txt_proteinas"
        android:text="@string/label_proteinas"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_carboidratos"/>

    <TextView
        android:id="@+id/txt_proteinas_valor"
        android:text="200g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_carboidratos"
        android:layout_toRightOf="@id/txt_proteinas"/>

</RelativeLayout>
